--- a/html/beranda.html
+++ b/html/beranda.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/beranda.css">
 </head>
 <body class="background-gradient">
-    <div class="logo-bca">
+    <div class="header">
         <img src="../assets/logo bca.svg" alt="">
     </div>
     <div class="welcome-message">
@@ -41,17 +41,30 @@
         </div>
     </div>
     <div class="quick-access">
-        <h3>Akses Cepat</h3>
-        <img src="" alt="">
+        <div>
+            <h3>Akses Cepat</h3>
+            <img src="../assets/Star.svg" alt="">
+        </div>
         <div class="quick-access-buttons">
             <a href="" class="small-blue-button"><img src="../assets/Flazz.svg" alt=""></a>
             <a href="" class="small-blue-button"><img src="../assets/Change PIN.svg" alt=""></a>
-            <a href="" class="small-blue-button"><img src="" alt=""></a>
-            <a href="" class="small-blue-button"><img src="" alt=""></a> 
+            <a href="" class="small-blue-button"><img src="../assets/Change Biometrics.svg" alt=""></a>
+            <a href="" class="small-blue-button"><img src="../assets/Transfer.svg" alt=""></a> 
+            <a href="" class="add-new"><img src="../assets/Plus.svg" alt=""></a>
         </div>
     </div>
-    <div class="navbar">
-
-    </div>
 </body>
+<footer>
+    <div class="navbar">
+        <div class="left">
+            <a href="" class="navbar-item"><img src="../assets/Home image.svg" alt="">Beranda</a>
+            <a href="transaksi.html" class="navbar-item"><img src="../assets/Transaksi2.svg" alt="">Transaksi</a>
+        </div>
+        <a href="" class="navbar-center-item"><img src="../assets/QRIS Text.svg" alt=""></a>
+        <div class="right">
+            <a href="" class="navbar-item"><img src="../assets/Bell.svg" alt="">Notifikasi</a>
+            <a href="" class="navbar-item"><img src="../assets/Akun saya.svg" alt="">Akun Saya</a>
+        </div>
+    </div>
+</footer>
 </html>
