--- a/html/beranda.html
+++ b/html/beranda.html
@@ -43,7 +43,7 @@
     <div class="quick-access">
         <div>
             <h3>Akses Cepat</h3>
-            <img src="../assets/Star.svg" alt="">
+            <span><img src="../assets/Star.svg" alt=""></span>
         </div>
         <div class="quick-access-buttons">
             <a href="" class="small-blue-button"><img src="../assets/Flazz.svg" alt=""></a>
@@ -57,7 +57,7 @@
 <footer>
     <div class="navbar">
         <div class="left">
-            <a href="" class="navbar-item"><img src="../assets/Home image.svg" alt="">Beranda</a>
+            <a href="beranda.html" class="navbar-item"><img src="../assets/Home image.svg" alt="">Beranda</a>
             <a href="transaksi.html" class="navbar-item"><img src="../assets/Transaksi2.svg" alt="">Transaksi</a>
         </div>
         <a href="" class="navbar-center-item"><img src="../assets/QRIS Text.svg" alt=""></a>
