--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,26 @@
         <a href="" class="small-white-button"><img src="../assets/Fingerprint.svg" alt=""></a>
     </div>
     <hr>
+    <div class="overlay" style="display: none;">  <!--apus display: none buat munculin divnya-->
+        <input type="text" placeholder="Masukan PIN">
+        <div>
+            <input type="button" value="Batal" class="decline-button">
+            <input type="button" value="Ganti" class="accept-button">
+        </div>
+    </div>
+    <div class="overlay" style="display: none;">  <!--apus display: none buat munculin divnya-->
+        <input type="text" placeholder="Masukan 6 Alfanumerik">
+        <div>
+            <input type="button" value="Batal" class="decline-button">
+            <input type="button" value="Masuk" class="accept-button">
+        </div>
+    </div>
+    <div class="popup-success" style="display: none;"> <!--apus display: none buat munculin divnya-->
+        <h2>PIN Berhasil Diganti</h2>
+    </div>
+    <div class="popup-failed" style="display: none;"> <!--apus display: none buat munculin divnya-->
+        <h2>PIN Salah</h2>
+    </div>
 </body>
 <footer>
     <p>Butuh bantuan? hubungi <span>dukungan</span></p>
