--- a/html/pembyaranpulsa.html
+++ b/html/pembyaranpulsa.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/transaksi/handphone.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/pembyaranpulsa.css">
 </head>
 <body>
     <div class="header">
-        <a href="../transaksi.html"><img src="../../assets/Back arrow.svg" alt=""></a>
+        <a href="transaksi.html"><img src="../assets/Back arrow.svg" alt=""></a>
         <h2>Telekomunikasi</h2>
     </div>
     <div class="form">
@@ -33,17 +33,23 @@
 
         <input type="button" value="Next">
     </div>
+    <div class="popup-success" style="display: none;"> <!--apus display: none buat munculin divnya-->
+        <h2>Transaksi Berhasil</h2>
+    </div>
+    <div class="popup-failed" style="display: none;"> <!--apus display: none buat munculin divnya-->
+        <h2>Transaksi Gagal</h2>
+    </div>
 </body>
 <footer>
     <div class="navbar">
         <div class="left">
-            <a href="../beranda.html" class="navbar-item"><img src="../../assets/Home image.svg" alt="">Beranda</a>
-            <a href="../transaksi.html" class="navbar-item"><img src="../../assets/Transaksi2.svg" alt="">Transaksi</a>
+            <a href="beranda.html" class="navbar-item"><img src="../assets/Home image.svg" alt="">Beranda</a>
+            <a href="transaksi.html" class="navbar-item"><img src="../assets/Transaksi2.svg" alt="">Transaksi</a>
         </div>
-        <a href="" class="navbar-center-item"><img src="../../assets/QRIS Text.svg" alt=""></a>
+        <a href="" class="navbar-center-item"><img src="../assets/QRIS Text.svg" alt=""></a>
         <div class="right">
-            <a href="" class="navbar-item"><img src="../../assets/Bell.svg" alt="">Notifikasi</a>
-            <a href="" class="navbar-item"><img src="../../assets/Akun saya.svg" alt="">Akun Saya</a>
+            <a href="" class="navbar-item"><img src="../assets/Bell.svg" alt="">Notifikasi</a>
+            <a href="" class="navbar-item"><img src="../assets/Akun saya.svg" alt="">Akun Saya</a>
         </div>
     </div>
 </footer>
