--- a/html/transaksi.html
+++ b/html/transaksi.html
@@ -23,7 +23,7 @@
             <img src="../assets/Open Arrow.svg" alt="">
             <hr>
             <div class="content-list" style="display: none;""> <!-- pas dipencet harusnya muncul, bagian js -->
-                <a href="transaksi/handphone.html" class="blue-button">Handphone</a>
+                <a href="pembayaranpulsa.html" class="blue-button">Handphone</a>
                 <a href="" class="blue-button">Telephone</a>
             </div>
         </a>
@@ -32,7 +32,7 @@
             <img src="../assets/Open Arrow.svg" alt="">
             <hr>
             <div class="content-list" style="display: none;"> <!-- pas dipencet harusnya muncul, bagian js -->
-                <a href="transaksi/tagihan air.html" class="blue-button">Air</a>
+                <a href="pembayarantagihan.html" class="blue-button">Air</a>
                 <a href="" class="blue-button">PLN Pascabayar</a>
                 <a href="" class="blue-button">Internet</a>
                 <a href="" class="blue-button">BPJS</a>
