--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BCA Mobile MENU</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/index.css">
 </head>
@@ -46,9 +46,12 @@
     <div class="popup-failed" style="display: none;"> <!--apus display: none buat munculin divnya-->
         <h2>PIN Salah</h2>
     </div>
+
+
 </body>
 <footer>
     <p>Butuh bantuan? hubungi <span>dukungan</span></p>
     <img src="../assets/Support Button.svg" alt="">
 </footer>
+
 </html>
