--- a/html/akunsaya.html
+++ b/html/akunsaya.html
@@ -3,22 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BCA Mobile Loading</title>
-    <link rel="stylesheet" href="../css/loadingcs.css">
+    <title>BCA Mobile Akun Saya</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/transaksi.css">
 </head>
 <body>
     <div class="header">
-        <a href="blokirkartu.html"><img src="../assets/Back arrow.svg" alt="" id="back-arrow"></a>
-        <h2>Blokir Kartu</h2>
+        <a href="beranda.html"><img src="../assets/Back arrow.svg" alt="" id="back-arrow"></a>
+        <h2>Akun Saya</h2>
     </div>
-
-    <div class="loadingtext">
-        <p>Mohon tunggu.</p>
-        <p>Menghubungi Customer Service.</p>
-        <img src="../assets/loading-svgrepo-com 1.png" alt="">
+    <div class="list">
+        <a href="blokirkartu.html" class="item">
+            <h2>Blokir Kartu</h2>
+            <img src="../assets/Open Arrow.svg" alt="">
+            <hr>
+        </a>
+        <a href="customerservice.html" class="item">
+            <h2>Customer Service</h2>
+            <img src="../assets/Open Arrow.svg" alt="">
+            <hr>
+            <div class="content-list" style="display: none;""> <!-- pas dipencet harusnya muncul, bagian js -->
+                <a href="transaksi/handphone.html" class="blue-button">Handphone</a>
+                <a href="" class="blue-button">Telephone</a>
+            </div>
+        </a>
     </div>
-
 </body>
 <footer>
     <div class="navbar">
@@ -44,7 +53,7 @@
                 </div>
                 <div class="menu">Notifikasi</div>
             </a>
-            <a href="akunsaya.html" class="navbar-item">
+            <a href="" class="navbar-item">
                 <div class="icon">
                     <img src="../assets/Akun saya.svg" alt="" id="icon-akun">
                 </div>
