--- a/html/beranda.html
+++ b/html/beranda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BCA Mobile HOME</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/beranda.css">
 </head>
@@ -28,8 +28,8 @@
         <div class="bottom">
             <h2>Saldo</h2>
             <div>
-                <h3>RP. XXXXXXXXXX</h3>
-                <img src="../assets/hidden eye.svg" alt="">
+                <h3 id="saldo-text">RP. XXXXXXXXXX</h3>
+                <img id="toggle-eye" src="../assets/hidden eye.svg" alt="Toggle Eye" style="cursor: pointer;">
             </div>
         </div>
         <div class="lihat-transaksi">
@@ -53,17 +53,55 @@
             <a href="" class="add-new"><img src="../assets/Plus.svg" alt=""></a>
         </div>
     </div>
+<script>
+    const saldoText = document.getElementById('saldo-text');
+    const toggleEye = document.getElementById('toggle-eye');
+
+    let saldoVisible = false;
+    const saldoAsli = "RP. 12.345.678";
+
+    toggleEye.addEventListener('click', () => {
+        saldoVisible = !saldoVisible;
+        if (saldoVisible) {
+            saldoText.textContent = saldoAsli;
+            toggleEye.src = "../assets/hidden eye.svg"; //tinggal diganti sama gambar mata terbuka klo mau
+        } else {
+            saldoText.textContent = "RP. XXXXXXXXXX";
+            toggleEye.src = "../assets/hidden eye.svg"; 
+        }
+    });
+</script>
 </body>
 <footer>
     <div class="navbar">
         <div class="left">
-            <a href="beranda.html" class="navbar-item"><img src="../assets/Home image.svg" alt="">Beranda</a>
-            <a href="transaksi.html" class="navbar-item"><img src="../assets/Transaksi2.svg" alt="">Transaksi</a>
+            <a href="beranda.html" class="navbar-item">
+                <div class="icon">
+                    <img src="../assets/Home image.svg" alt="" id="icon-beranda">
+                </div>
+                <div class="menu">Beranda</div>
+            </a>
+            <a href="transaksi.html" class="navbar-item">
+                <div class="icon">
+                    <img src="../assets/Transaksi2.svg" alt="" id="icon-transaksi">
+                </div>
+                <div class="menu">Transaksi</div>
+            </a>
         </div>
         <a href="" class="navbar-center-item"><img src="../assets/QRIS Text.svg" alt=""></a>
         <div class="right">
-            <a href="" class="navbar-item"><img src="../assets/Bell.svg" alt="">Notifikasi</a>
-            <a href="" class="navbar-item"><img src="../assets/Akun saya.svg" alt="">Akun Saya</a>
+            <a href="" class="navbar-item">
+                <div class="icon">
+                    <img src="../assets/Bell.svg" alt="" id="icon-notifikasi">
+                </div>
+                <div class="menu">Notifikasi</div>
+            </a>
+            <a href="akunsaya.html" class="navbar-item">
+                <div class="icon">
+                    <img src="../assets/Akun saya.svg" alt="" id="icon-akun">
+                </div>
+                <div class="menu">Akun Saya</div>
+            </a>
         </div>
     </div>
 </footer>
