--- a/html/customerservice.html
+++ b/html/customerservice.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Service</title>
+    <title>BCA Mobile Customer Service</title>
     <link rel="stylesheet" href="../css/customerservice.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="header">
-        <a href="beranda.html"><img src="../assets/Back arrow.svg" alt=""></a>
+        <a href="akunsaya.html"><img src="../assets/Back arrow.svg" alt="" id="back-arrow"></a>
         <h2>Blokir Kartu</h2>
     </div>
 
@@ -25,21 +25,41 @@
     </div>
     
     <div class="confirmation">
-        <button>Kembali</button>
-        <button class="active"><a href="../html/loadingcs.html">Hubungi</a></button>
+        <button><a href="akunsaya.html">Kembali</a></button>
+        <button class="active"><a href="loadingcs.html">Hubungi</a></button>
     </div>
 
 </body>
 <footer>
     <div class="navbar">
         <div class="left">
-            <a href="beranda.html" class="navbar-item"><img src="../assets/Home image.svg" alt="">Beranda</a>
-            <a href="transaksi.html" class="navbar-item"><img src="../assets/Transaksi2.svg" alt="">Transaksi</a>
+            <a href="beranda.html" class="navbar-item">
+                <div class="icon">
+                    <img src="../assets/Home image.svg" alt="" id="icon-beranda">
+                </div>
+                <div class="menu">Beranda</div>
+            </a>
+            <a href="transaksi.html" class="navbar-item">
+                <div class="icon">
+                    <img src="../assets/Transaksi2.svg" alt="" id="icon-transaksi">
+                </div>
+                <div class="menu">Transaksi</div>
+            </a>
         </div>
         <a href="" class="navbar-center-item"><img src="../assets/QRIS Text.svg" alt=""></a>
         <div class="right">
-            <a href="" class="navbar-item"><img src="../assets/Bell.svg" alt="">Notifikasi</a>
-            <a href="" class="navbar-item"><img src="../assets/Akun saya.svg" alt="">Akun Saya</a>
+            <a href="" class="navbar-item">
+                <div class="icon">
+                    <img src="../assets/Bell.svg" alt="" id="icon-notifikasi">
+                </div>
+                <div class="menu">Notifikasi</div>
+            </a>
+            <a href="akunsaya.html" class="navbar-item">
+                <div class="icon">
+                    <img src="../assets/Akun saya.svg" alt="" id="icon-akun">
+                </div>
+                <div class="menu">Akun Saya</div>
+            </a>
         </div>
     </div>
 </footer>
